--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ header{
     width: 1320px;
     height: 600px;
     margin: 50px auto 0 auto;
+    
 }
 main{
     font-family: 'Inter', sans-serif;
@@ -12,6 +13,8 @@ h1{
     font-size: 72px;
     text-align: center;
     margin-top: 44px;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 h2{
     color: #FFF;
@@ -44,6 +47,8 @@ h2{
     font-size: 48px;
     font-style: normal;
     font-weight: 700;
+    margin-bottom: 0;
+    padding-bottom: 0;
     
 }
 .pic{
@@ -69,6 +74,7 @@ h2{
     font-weight: 900;
     letter-spacing: 7px;
     padding-right: 400px;
+    text-align: justify;
 }
 .words{
     color:#FFF;
@@ -196,13 +202,8 @@ h2{
     text-align: justify;
     align-content: left;
     padding: 0;
-    line-height: 20px;
 }
-.Best>day{
-    text-align: justify;
-    width: 393px;
-}
-.FUNCTIONAL>h5{
+.funtional>h5{
     text-align: center;
     font-size: 24px;
     font-weight: 500px;
@@ -211,7 +212,7 @@ h2{
     padding-bottom: 0;
     margin-bottom: 0;
 }
-.FUNCTIONAL>h1{
+.funtional>h1{
     text-align:center;
     font-size: 72px;
     font-weight: 900;
@@ -227,7 +228,7 @@ h2{
 .colap{
     color: #F00;
 }
-.FUNCTIONAL>p{
+.funtional>p{
     width: 1068px;
     color: rgba(21, 18, 27, 0.523);
     text-align: center;
@@ -235,8 +236,208 @@ h2{
     font-style: normal;
     font-weight: 500;
     line-height: 32px;
-    margin-left: 500px;
+    margin-left: 300px;
     padding: 0;
     padding-top: 0;
     margin-top: 0;
+}
+
+.images{
+    width: 1320px;
+    margin: 100 auto 0 auto;
+    display: block;
+    position: relative
+    
+}
+.images>.img1{
+    position: absolute;
+    left: 730px;
+    top: 75px;
+}
+.images>.img2{
+    float: right;
+}
+.image2-container{
+    position: relative;
+}
+.funtional .img3{
+    display: block;
+    margin: 0 auto;
+}
+.funtional .img4{
+    position: absolute;
+    width: 500px;
+    justify-content: center;
+    padding-bottom: 700px;
+    left: 300px;
+}
+
+.best{
+    color: #F00;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+.our{
+    color: #070211;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+.dolor{
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    margin-top: 0;
+
+}
+.read, .box, .boxes{
+    margin-left: 150px;
+}
+.mail{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    margin-top: 90px;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+.subscribe{
+    color: #070211;
+    text-align: center;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+.ready{
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+.input-container {
+    position: relative;
+    margin-top: 70px;
+    padding-top: 15px;
+    margin-top: 0;
+}
+.input-space {
+    width: 500px;
+    position: absolute;
+    /* top: 50%;
+    left: 50%; */
+    margin-left: 430px;
+   
+}
+input[type="email"] {
+    padding: 20px 60px 20px 20px;
+    border: none;
+    border-radius: 50px 0 0 50px;
+    outline: none;
+}
+input[type="submit"] {
+    padding: 13px 40px 18px 40px;
+    border: none;
+    font-family: Inter;
+    position: relative;
+    border-radius: 0 50px 50px 0;
+    left: -5px;
+    border-radius: 0 50px 50px 0;
+    font-weight: 600;
+    font-size: 20px;
+    border: none;
+    color: #FFF;
+    background-color: #F00;
+    transition: 0.2s ease;
+}
+.button-type{
+    width: 1320px;
+    margin: 0 auto;
+    background-color: #dbd5d5;
+    text-align: center;
+    margin-bottom: 100px;
+    height: 616px;
+    
+}
+.foot{
+    width: 1600px;
+    height: 609px;
+    flex-shrink: 0;
+    background: #070211;
+}
+.right-side{
+    color: #FFF;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px;
+}
+.big{
+    padding-top: 140px;
+    margin-left: 150px;
+}
+.call{
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
+}
+.phone{
+    color: #FFF;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px;
+}
+.media{
+    display: flex;
+    justify-content: center;
+    padding-left: 10px;
+}
+.last-content{
+    align-items: center;
+    padding-top: 100px;
+    margin-top: 100px;
+}
+
+.footer-span-1 {
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 500;
+    padding-left: 140px;
+    margin-top: 500px;
+}
+
+.footer-span-2 {
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 500;
+    padding-left: 1300px;
+    /* padding-top: 150px; */
 }
